two-column layout css

--- a/index.html
+++ b/index.html
@@ -2,8 +2,24 @@
 <html>
 <head>
 	<title>Hackerati Challenege</title>
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-
+	<div id="container">
+		<div id="header">Hackerati</div>
+		<div id="leftSide">
+			<ul>
+				<li>Some Sentences</li>
+				<li>That will be moved</li>
+				<li>In Ajax</li>
+			</ul>
+		</div>
+		<div id="rightSide">
+			<ul>
+				<li>This is the</li>
+				<li>Output side</li>
+			</ul>
+		</div>
+	</div>
 </body>
 </html>
