cleaned up styles

--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Hackerati Challenege</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 	<div id="container">
-		<div id="header">Hackerati</div>
+		<div id="header">
+			<h1>Hackerati Challenge: Front End</h1>
+		</div>
 		<div id="leftSide">
-			<ul>
-				<li>Some Sentences</li>
-				<li>That will be moved</li>
-				<li>In Ajax</li>
+			<ul class="sentence-container">
+				<li class="sentence">Some Sentences</li>
+				<li class="sentence">That will be moved</li>
+				<li class="sentence">In Ajax</li>
 			</ul>
 		</div>
 		<div id="rightSide">
-			<ul>
-				<li>This is the</li>
-				<li>Output side</li>
+			<ul class="sentence-container">
+				<li class="sentence">This is the</li>
+				<li class="sentence">Output side</li>
 			</ul>
 		</div>
 	</div>
