--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Hackerati Challenege</title>
+	<title>Hackerati Challenge</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
@@ -24,5 +24,6 @@
 			</ul>
 		</div>
 	</div>
+	<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
